# aoc-2025

./: .benchmark_cache.toml  .editorconfig  .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: benchmark.yml
crates/derive_solution/: Cargo.toml
crates/derive_solution/src/: lib.rs
src/: aoc.rs  bench.rs  benchmark_cache.rs  inputs.rs  main.rs  readme.rs  utils.rs
src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  mod.rs
src/utils/: grid.rs  mod.rs
