[workspace]
members = ["crates/derive_solution"]

[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_solution = { path = "crates/derive_solution" }
clap = { version = "4.5.51", features = ["cargo", "derive"] }
peak_alloc = { version = "0.3.0" }
thiserror = "2.0.17"
regex = "1.12.2"
log = "0.4.28"
pretty_env_logger = "0.5.0"
directories = "6.0.0"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["alloc", "derive"] }
toml = { version = "0.9.8" }
sha2 = "0.10.8"
reqwest = { version = "0.12.24", features = ["blocking"] }
itertools = "0.14.0"
sysinfo = "0.37.2"
rayon = "1.11.0"
pathfinding = "4.14.0"
smol_str = "0.3.4"
anyhow = "1.0.100"

[build-dependencies]
prettyplease = "0.2.37"
quote = "1.0.42"
regex = "1.12.2"
syn = "2.0.110"


